--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -3,20 +3,30 @@
 #   Documentation: https://docs.hugoblox.com/reference/language/
 
 # Default language
-en:
-  languageCode: en-us
+es:
+  languageCode: es-ar
   # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
-  #contentDir: content/en
+  contentDir: content/es
+  title: RAICyT | Red Autoridades de Institutos de Ciencia y Tecnología 
 
 # Uncomment the lines below to configure your website in a second language.
-#zh:
-#  languageCode: zh-Hans
-#  contentDir: content/zh
-#  title: Chinese website title...
-#  params:
-#    description: Site description in Chinese...
-#  menu:
-#    main:
-#      - name: 传
-#        url: '#about'
-#        weight: 1
+en:
+  languageCode: en-us
+  contentDir: content/en
+  title: RAICyT | Network of Authorities of Science and Technology Institutes (Argentina)
+  params: 
+    description: This is the site of the Argentinian network of authorities of Institutes that form the mesh of Science and Technology across the country. 
+  menu: 
+    main:
+    - name: Home
+      url: /
+      weight: 10
+    - name: About
+      url: /en/about/
+      weight: 1
+    - name: Documents
+      url: /en/documents
+      weight: 20
+    - name: Announcements
+      url: /en/announcements
+      weight: 30
