Update params.yaml fix analytics ID

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -17,7 +17,7 @@ marketing:
     description: 'Red de Autoridades de Instituciones de Ciencia y Tecnología de Argentina'
     twitter: 'RAICYT_Ar'
   analytics:
-    google_analytics: '427063210'
+    google_analytics: 'G-13H9Q6WGX6'
   verification:
     google: ''
     baidu: ''
