agrego funcionalidad para testear edicion de paginas
Agrego modulo + configuracion para activar edicion de paginas online usando Decap CMS (https://decapcms.org/).

Requiere de configuracion adicional en Netlify. Y testeo.

--- a/config/_default/module.yaml
+++ b/config/_default/module.yaml
@@ -7,3 +7,6 @@
 imports:
   - path: github.com/HugoBlox/hugo-blox-builder/modules/blox-plugin-netlify
   - path: github.com/HugoBlox/hugo-blox-builder/modules/blox-tailwind
+  # Add the Decap CMS module to allow easy editing of web pages:
+  - path: github.com/HugoBlox/hugo-blox-builder/modules/blox-plugin-decap-cms
+
