--- a/netlify.toml
+++ b/netlify.toml
@@ -19,3 +19,7 @@
   package = "netlify-plugin-hugo-cache-resources"
   [plugins.inputs]
     debug = true
+
+[[redirects]]
+  from = "https://raicyt.netlify.app"
+  to = "https://raicyt.org.ar"
