--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -60,7 +60,7 @@ footer:
 
 # Localization
 locale:
-  date_format: '02 Ene 2006'
+  date_format: 'January 2, 2006'
   time_format: '3:04 PM'
   address_format: es-ar
 
