--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,7 +14,7 @@ marketing:
     site_type: Organization
     local_business_type: ''
     org_name: 'RAICYT'
-    description: 'Red de Autoridades de Instituciones de Ciencia y Tecnología de Argentina'
+    description: 'Red de Autoridades de Institutos de Ciencia y Tecnología de Argentina'
     twitter: 'RAICYT_Ar'
   analytics:
     google_analytics: 'G-13H9Q6WGX6'
