agrego menu/solapa reuniones (meetings)

--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -30,3 +30,6 @@ en:
     - name: Announcements
       url: /en/announcements
       weight: 30
+    - name: Meetings
+      url: /en/meetings
+      weight: 40
